# python-project-lvl4

./: .env.example  .gitignore  .travis.yml  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pyci.yml
labels/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_alter_label_name.py
labels/templates/labels/: create.html  delete.html  labels.html
locale/en/LC_MESSAGES/: django.mo  django.po
statuses/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
statuses/templates/statuses/: create.html  delete.html  statuses.html
task_manager/: __init__.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
task_manager/templates/task_manager/: index.html  login.html  register.html  users.html
tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20210605_2325.py
tasks/templates/tasks/: base_tasks.html  create.html  delete.html  detail.html  index.html  tasks.html
templates/: base.html
users/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: delete.html  login.html  register.html  users.html
