[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = ["Andrka <lozhnikov.andrei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
